>> Beezer <<
A detailed history of Beezer...

• Version 1.00
> Updated AboutWindow, removed Authorwindow
> Enhanced path checking for worker binaries
> Added support for xz archives
> Removed obsolete ZETA code
> Migrate settings folder to B_USER_SETTINGS_DIRECTORY, to be more consistent with Haiku standards
> Statically link tar archiver into gzip, bzip2 and variants
> Added tooltips
> Bug Fix: Fixed reading and testing of 7z files for latest 7z binaries
> Bug Fix: Minor UI fixes for Haiku
> Compiled and built under Haiku natively using CMake, abandoned legacy BeIDE projects
> Change main app icon to a vector one created by Meanwhile
> Load file type icons from the system database
> Removed close button from the toolbar
> Fixed size of infobar slots

• Version 0.09
> Made file extension stripping in Extract context menu case insensitive.
> Added extract without full path option when extracting through drag 'n drop. This works
	a bit intelligently and takes extra care to avoid clobbering when conflicts in filenames
	occur when dumping all into one destination directory.
> Started work on ArchiveRep - which represents an archive, this will not be used by
	MainWindow as MainWindow needs too intricate a connection with Archiver object, rather
	this will be used in future by Tracker add-on, tools such as Multi-Extract, Multi-Test.
> The ArchiveRep object needs to hang around till the archive is manipulated, otherwise it
	will tear down the temp. folder, archiver object etc. as it goes
> Started work on AddOnWindow
> Also got to hear about a format called LZO. The lzop binary seems good enough to be
	made into a Beezer add-on, it behaves currently like a gzip that can store many files but
	not a tar.gzip as once stored it more files cannot be added.
> Bug Fix: fixed a tiny bug where "Operation unavailable" was getting printed on the same
	line rather than a new one, yes I AM picky :)